--- a/files/new-Design/assets/css/neo.css
+++ b/files/new-Design/assets/css/neo.css
@@ -1307,6 +1307,14 @@ a {
   position: absolute;
   right: 0px;
   top: -70px; }
+  @media (max-device-width: 480px), screen and (max-width: 800px) {
+    .footer-icon {
+      position: static;
+      float: right; } }
+
+@media (max-device-width: 480px), screen and (max-width: 800px) {
+  p.tiny {
+    min-height: 3.5em; } }
 
 .f-Col-1 {
   padding-right: 12px; }
@@ -1353,6 +1361,9 @@ a {
     background-image: url(../img/latest-news.png);
     width: 134px;
     height: 103px; }
+  @media (max-device-width: 480px), screen and (max-width: 800px) {
+    .f-Col-3 {
+      padding-left: 0; } }
 
 .footer-Outro {
   background: #ccdf9b;
